tests/jsr335/Semantics/InterfaceMethods/MethodDeclarations/ShouldFail/syntax08/Test.java


public class Test {
	interface A {
		strictfp strictfp void m() { 
			
		} 
	}
}